refactored, server routes and reducers broken out

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </HEAD>
 
 <BODY>
-  <HEADER>SCHOOLS FOR MONSTERS</HEADER>
+  <HEADER>
+    <h1>SCHOOLS FOR MONSTERS</h1>
+  </HEADER>
 
   <div id="root"></div>
 
   <FOOTER>
     <hr />
+    <p><em>FSA senior enrichment project by protonbobby</em></p>
   </FOOTER>
 </BODY>
 
