--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <HEAD>
   <TITLE>SCHOOL-FOR-MONSTERS</TITLE>
   <SCRIPT src="/dist/main.js" defer></SCRIPT>
+  <link rel="stylesheet" href="https://npmcdn.com/bootstrap@4.0.0-alpha.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
   <link rel="stylesheet" href="dist/style.css" />
 </HEAD>
 
