small changes to client-side routes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <SCRIPT src="/dist/main.js" defer></SCRIPT>
   <link rel="stylesheet" href="https://npmcdn.com/bootstrap@4.0.0-alpha.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
   <link rel="stylesheet" href="dist/style.css" />
+  <link rel="shortcut icon" href="/monster.ico" type="image/x-icon">
+  <link rel="icon" href="/monster.ico" type="image/x-icon">
 </HEAD>
 
 <BODY>
