confirm and small css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <TITLE>SCHOOL-FOR-MONSTERS</TITLE>
   <SCRIPT src="/dist/main.js" defer></SCRIPT>
   <link rel="stylesheet" href="https://npmcdn.com/bootstrap@4.0.0-alpha.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
   <link rel="stylesheet" href="dist/style.css" />
   <link rel="shortcut icon" href="/monster.ico" type="image/x-icon">
   <link rel="icon" href="/monster.ico" type="image/x-icon">
@@ -12,13 +13,12 @@
 
 <BODY>
   <HEADER>
-    <h1>SCHOOLS FOR MONSTERS</h1>
+    <h1 id='title'>SCHOOLS FOR MONSTERS</h1>
   </HEADER>
 
   <div id="root"></div>
 
   <FOOTER>
-    <hr />
     <p><em>FSA senior enrichment project by protonbobby</em></p>
   </FOOTER>
 </BODY>
